# tsp_genetic_algorithm_AI

./: .gitignore  pyproject.toml
src/tsp_genetic_algorithm_ai/: GeneticAlgorithm.py  Location.py  Route.py  distances_map.py  interface.py  main.py  mock_data.py
