[project]
name = "tsp-genetic-algorithm-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilmar Júnior",email = "gilmarjunioreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "tsp_genetic_algorithm_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
